--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,6 @@
+@import "tailwindcss";
+@import "tailwindcss/preflight";
+
 html, body {
   margin: 0;
   padding: 0;
@@ -26,7 +29,7 @@ html, body {
 }
 
 .flow .reactflow-wrapper {
-  width: 80vw;
+  width: 95vw;
   height: 85vh;
 }
 
@@ -50,4 +53,28 @@ html, body {
   .flow .aside {
     max-width: 250px;
   }
+}
+
+
+/* styles.css */
+.handle {
+  border-color: grey;
+  border-radius: 0.375rem; /* 'md' size */
+  border-style: dashed;
+  min-width: 12vw;
+  min-height: 10vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  top: var(--top);
+  left: var(--left);
+  right: var(--right);
+  position: absolute;
+  color: grey;
+  transition: all 0.2s ease-in-out;
+}
+
+.handle:hover {
+  border-color: blue;
+  color: blue;
 }
