--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap');
 @import "tailwindcss";
 
 @plugin "tailwindcss-animate";
 
 @custom-variant dark (&:is(.dark *));
+@import '@rexxars/react-json-inspector/json-inspector.css';
 
 @layer base {
   :root {
@@ -55,8 +57,6 @@
   .flow {
     display: flex;
     flex-direction: row;  /* Switch to row layout for larger screens */
-    width: 100%;
-    height: 100%;
   }
 
   .flow .aside {
@@ -64,21 +64,27 @@
   }
 }
 
+
 /* styles.css or your main CSS file */
 @layer utilities {
   .node-group {
-    @apply text-lg text-center p-1 rounded-md rounded-r-lg border-r-1;
+    @apply font-medium text-gray-600 text-lg text-center p-1 rounded-md rounded-r-lg border-r-1;
     writing-mode: sideways-lr;
+  }
+  .node-container{
+    @apply relative border-1 bg-white !border-black rounded-md
   }
   .node-content {
     @apply flex p-4 gap-7 flex-col;
-    width: 42vw;
   }
   .node-title {
     @apply text-4xl text-center;
   }
   .filter-input{
     @apply w-full p-2 border border-gray-300 rounded-md bg-white text-gray-700;
+  }
+  .filter-option{
+    @apply cursor-pointer hover:bg-gray-200
   }
   .standard-input{
     @apply w-full p-2 border border-gray-300 rounded-md bg-white text-gray-700;
@@ -88,6 +94,15 @@
   }
   .submit-button{
     @apply bg-green-300 disabled:bg-gray-400 disabled:cursor-not-allowed py-2 px-4 rounded disabled:hover:bg-gray-400 hover:bg-gray-400
+  }
+  .tabTrigger{
+    @apply flex w-full pb-2 !border-t-1 !border-l-1 !border-r-1 rounded-t-sm !border-gray-400 items-center gap-2 px-4 pt-2 text-gray-600 hover:text-gray-900 border-transparent
+  }
+  .tabContent{
+    @apply p-1 h-full !border-gray-400 bg-gray-50 !border-b-1 !border-l-1 !border-r-1 rounded-b-sm
+  }
+  .paginationButton{
+    @apply border p-0.5 text-sm !w-6 !h-6 leading-3
   }
 }
 
@@ -108,27 +123,58 @@ html, body {
 
 .main {
   width: 100%;
-  height: 100%; /* Full viewport height */
+  height: 100%;
+}
+
+table {
+  width: 100%; /* Allow full table resizing */
+  height: 100%;
+}
+
+.flow {
+  width: 100%;
+  height: 100%;
 }
 
 .flow .reactflow-wrapper {
-  width: 95vw;
-  height: 80vh;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  right: 0;
+  text-align: center; /* Center content horizontally */
+}
+
+h1{
+  @apply text-5xl font-serif font-semibold mb-6 text-gray-900
+ }
+
+h3{
+  @apply text-xl font-serif font-light text-gray-700 mb-2 opacity-90
+ }
+
+ h2 {
+  @apply text-4xl font-serif font-semibold mb-5 text-gray-900;
+}
+
+h4 {
+  @apply text-lg font-serif font-medium text-gray-800 opacity-90;
+}
+
+h5 {
+  @apply text-base font-serif font-medium text-gray-700 opacity-90;
+}
+
+h6 {
+  @apply text-sm font-serif font-medium text-gray-600 opacity-90 uppercase;
+}
+
+p {
+  @apply text-base font-serif font-light text-gray-700 leading-relaxed;
 }
 
 
-@media screen and (min-width: 768px) {
-  .flow {
-    display: flex;
-    flex-direction: row;  /* Switch to row layout for larger screens */
-    width: 100%;
-    height: 100%;
-  }
 
-  .flow .aside {
-    max-width: 250px;
-  }
-}
+
 
 
 :root {
